bpy.ops.transform.rotate doesn't work in blender in background mode. (same as T88610) #99037

Closed
opened 2022-06-21 05:42:01 +02:00 by anatawa12 · 8 comments

System Information
Operating system: macOS-12.4-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Broken: version: 2.93.9
Worked: (newest version of Blender that worked as expected)

Short description of error
I'm using blender python to export model file with a certain procedure,
and I'm trying to make it work in blender background mode.
In my process to export model file, I want to rotate model, so I'm using bpy.ops.transform.rotate.
However, it doesn't work in background mode.

I think this is same as #88610 (closed due to inactivity).

Exact steps for others to reproduce the error

$ blender --background  --python-console
Blender 3.2.0 (hash e05e1e369187 built 2022-06-08 10:34:47)
Read prefs: /Users/anatawa12/Library/Application Support/Blender/3.2/config/userpref.blend
Python 3.10.2 (main, Jan 26 2022, 15:26:42) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> import bpy
>>> bpy.ops.transform.translate()

{'FINISHED'}
>>> bpy.ops.transform.rotate()

Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "/Applications/Blender.app/Contents/Resources/3.2/scripts/modules/bpy/ops.py", line 115, in __call__
    ret = _op_call(self.idname_py(), None, kw)
RuntimeError: Operator bpy.ops.transform.rotate.poll() failed, context is incorrect
>>> bpy.ops.transform.translate.poll()

True
>>> bpy.ops.transform.rotate.poll()

False
>>> exit()

**System Information** Operating system: macOS-12.4-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Broken: version: 2.93.9 Worked: (newest version of Blender that worked as expected) **Short description of error** I'm using blender python to export model file with a certain procedure, and I'm trying to make it work in blender background mode. In my process to export model file, I want to rotate model, so I'm using `bpy.ops.transform.rotate`. However, it doesn't work in background mode. I think this is same as #88610 (closed due to inactivity). **Exact steps for others to reproduce the error** ``` $ blender --background --python-console Blender 3.2.0 (hash e05e1e369187 built 2022-06-08 10:34:47) Read prefs: /Users/anatawa12/Library/Application Support/Blender/3.2/config/userpref.blend Python 3.10.2 (main, Jan 26 2022, 15:26:42) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin Type "help", "copyright", "credits" or "license" for more information. (InteractiveConsole) >>> import bpy >>> bpy.ops.transform.translate() {'FINISHED'} >>> bpy.ops.transform.rotate() Traceback (most recent call last): File "<console>", line 1, in <module> File "/Applications/Blender.app/Contents/Resources/3.2/scripts/modules/bpy/ops.py", line 115, in __call__ ret = _op_call(self.idname_py(), None, kw) RuntimeError: Operator bpy.ops.transform.rotate.poll() failed, context is incorrect >>> bpy.ops.transform.translate.poll() True >>> bpy.ops.transform.rotate.poll() False >>> exit() ```
Author

Added subscriber: @anatawa12

Added subscriber: @anatawa12

#88610 was marked as duplicate of this issue

#88610 was marked as duplicate of this issue
Author

In my environment, this patch works: 506c3af8a3

In my environment, this patch works: https://github.com/anatawa12/blender/commit/506c3af8a3c0d7177df263d0b36f8be5622a6eba
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @osk386, @Darknoodles

Added subscribers: @osk386, @Darknoodles

This issue was referenced by 77eadbede4

This issue was referenced by 77eadbede493cb2a02b82981ad71af3da86b2d0c
Campbell Barton self-assigned this 2022-06-24 09:47:58 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99037
No description provided.