Fix T99037: Allow transform.rotate in background mode